# identra

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  justfile  package.json
.github/workflows/: build.yml
apps/identra-desktop/: .gitignore
apps/identra-desktop/frontend/: index.html  package.json  vite.config.ts
apps/identra-desktop/frontend/src/: AgentNode.tsx  App.tsx  BoardPreview.tsx  BrowserNode.tsx  CommandBar.tsx  FileNode.tsx  FilesPanel.tsx  FocusView.tsx  NoteNode.tsx  Onboarding.tsx  SettingsPanel.tsx  UpdateStrip.tsx  WallpaperPicker.tsx  WorkPanel.tsx  WorkspaceMenu.tsx  WorkspacePicker.tsx  api.ts  commandcenter.test.ts  commandcenter.ts  devurl.test.ts  devurl.ts  icons.ts  icons.tsx  main.tsx  onboarding.test.ts  preview.test.ts  preview.ts  reattach.test.ts  reattach.ts  styles.css  tidy.test.ts  tidy.ts  wallpaper.test.ts  wallpaper.ts
apps/identra-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/identra-desktop/src-tauri/capabilities/: default.json
apps/identra-desktop/src-tauri/icons/: icon.icns
apps/identra-desktop/src-tauri/src/: lib.rs  main.rs
crates/identra-core/: Cargo.toml  README.md
crates/identra-core/src/: agents.rs  canvas.rs  devserver.rs  files.rs  fileview.rs  lib.rs  session.rs  settings.rs  terminal.rs  text.rs  wallpaper.rs  workspace.rs  worktree.rs
crates/identra-mcp/: Cargo.toml  README.md
crates/identra-mcp/examples/: bus_wiring_check.rs
crates/identra-mcp/src/: config.rs  inbox.rs  lib.rs  server.rs  tasks.rs
crates/identra-mcp/tests/: bus_http.rs
crates/identra-memory/: Cargo.toml  README.md
crates/identra-memory/examples/: recall_check.rs
crates/identra-memory/src/: lib.rs  local_embedder.rs
docs/: README.md  browser-bridge.md
presets/identra-agents/: README.md  health-recipe.md
scripts/: trace-gate.sh
