[package]
name = "identra-desktop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Identra desktop shell: a Tauri v2 window over identra-core."

[lib]
name = "identra_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
identra-core = { path = "../../../crates/identra-core" }
identra-mcp = { path = "../../../crates/identra-mcp" }
