[package]
name = "identra-desktop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Identra desktop shell: a Tauri v2 window over identra-core."

[lib]
name = "identra_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# protocol-asset serves the wallpaper library to the webview under the scope in tauri.conf.json.
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
identra-core = { path = "../../../crates/identra-core" }
# The app is where the embedding model ships, so recall matches on meaning rather than on the words
# someone happened to use. The crates leave it off so their tests stay offline.
identra-mcp = { path = "../../../crates/identra-mcp", features = ["fastembed"] }
identra-memory = { path = "../../../crates/identra-memory", features = ["fastembed"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
